# ImageResizerForDiscord

./: CMakeLists.txt  README.md  main.cpp
